2.4.4 () -

- TW-1596 taskwarrior can't compile FreeBSD 9.3 32bit environment (thanks to
          ribbon)
- TW-1603 Priority color precedence changed since it is a UDA, should be lowered
          again (thanks to Jens Erat).
- TW-1605 Japanese translation for Taskwarrior (thanks to Oota Toshiya).
- TW-1606 scheduled.any filter (thanks to Peter Rochen).
- The 'obfuscate' setting, if set to '1' will replace all text with 'xxx'.
- POSIX file locking mechanism, eliminating platform-specific code.

------ current release ---------------------------

2.4.3 (2015-04-19) 499044b9b6bdbc95338ea585204e949d80b24a09

- TW-57   user defined attribute sort order (thanks to Max Muller).
- TW-70   urgency.user.keyword.<keyword>.coefficient=...
- TW-111  User-defined priorities.
- TW-1279 Make default.* not apply to recurring tasks.
- TW-1287 Make default.* not apply to synced tasks.
- TW-1539 user-defined urgency coefficients for priority values.
- TW-1541 Priority should be converted to UDA (in default taskrc) (thanks to
          Tomas Babej).
- TW-1556 task hangs when modifying uda field with percent-encoded (url-encoded)
          value (thanks to Stefan Frühwirth).
- TW-1578 Bash tab completion problems on first run
          (thanks to Renato Alves and Ptolemarch).
- TW-1580 "modified" attribute no longer updated (thanks to David Patrick).
- TW-1581 Tasks with dependencies show wrong urgency values for the first
  report run after a task in the dependency chain is completed/deleted (thanks
  to Ulf Eliasson).
- TW-1583 Invalid ID displayed for first report after done/delete (thanks to
  Ulf Eliasson).
- TW-1584 attr.{isnt,not} use partial matching.
- TW-1587 Fix and improve example on-exit hook, adjust to new hooks API
  (thanks to Jochen Sprickerhof).
- TW-1588 Most Export scripts cannot deal with new export format (thanks to
  Scott Carter).
- TW-1590 syntax of rcfile not documented (whitespace, line continuation)
          (thanks to Scott M).