@@ -1,5 +1,7 @@
 2.4.4 () -
 
+- TW-1474 Documentation is confusing with respect to user/uuid on the server
+          (thanks to Tomas Babej).
 - TW-1596 taskwarrior can't compile FreeBSD 9.3 32bit environment (thanks to
           ribbon)
 - TW-1603 Priority color precedence changed since it is a UDA, should be lowered
